citations first chatper

--- a/document/book.bib
+++ b/document/book.bib
@@ -1008,3 +1008,9 @@ Basically article on IDyOM 101
 }
 
 
+@Book{schumannMusikalischeHausUnd1967,
+  title = {Musikalische {{Haus}}- Und {{Lebenregeln}}},
+  date = {1967},
+  origdate = {1848},
+  author = {Robert Schumann},
+}
