--- a/document/index.Rmd
+++ b/document/index.Rmd
@@ -36,6 +36,12 @@ Some line here about if we really want to understand what is happening we need t
 Great to rely on some sort of anecdoatal evidence, but if we are going to put things on the line with our education then we need to be able to make some sort of falsifiable claims about what we are doing.
 Can only do that through the lens of science. 
 
+## Claims about need to join the worlds of theory and pedagogy 
+
+* [@davidbutlerWhyGulfMusic1997a]
+* [@klonoskiPerceptualLearningHierarchy2000] - perceptual hierarchy, not enough info from aural skills training
+
+
 ## Chapter Overview 
 
 In this first chapter, I introduce the process of melodic dictation and discuss factors that would presumably could play a role in taking melodic dictation.
