--- a/document/index.Rmd
+++ b/document/index.Rmd
@@ -40,7 +40,7 @@ Can only do that through the lens of science.
 
 * [@davidbutlerWhyGulfMusic1997a]
 * [@klonoskiPerceptualLearningHierarchy2000] - perceptual hierarchy, not enough info from aural skills training
-
+* [@karpinskiAuralSkillsAcquisition2000] - "There is indeed a gap between the disciples of music cognition and aural skills training", GK says that one of his goals is to bridge that gap, and he does.
 
 ## Chapter Overview 
 
