--- a/document/01-theoretical-bkgrd-rationale.Rmd
+++ b/document/01-theoretical-bkgrd-rationale.Rmd
@@ -4,28 +4,38 @@
 
 Melodic dictation is the process in which an individual is able to hear a melody, retain it in memory, and then use their knowledge of Western musical notation to recreate the mental image of the melody on paper in a limited time frame.
 For many, becoming profiecent at this task is at the core of developing one's aural skills.
-This link between _ear_ training and it's implied transfer is tacit knowledge and to question the usefulness of this skill might even qualify as heretical.
-Though researchers like Klonoski has raised important questions like "What specific deficiency is revelaned with an incorrect reponse in melodic dictaiton settings?" [@klonoskiImprovingDictationAuralSkills2006]
-It is this ability to think _in_ music that h
+Presumably the reason that melodic dictation is so highly valued in music pedagogical circles is because that time spent learning to do this highly complex set of mental gymnastics results in increases in near transfer abilities^[since at no point after being in an Aural Skills setting would some one require one to write down a melody on paper within a limited time frame.] that are of great benefit to the student once they leave the classroom.
+Melodic dictation is only one of many skills that are taught and assesed in Schools of Music and this skill is normally taught in the context of an Aural Skills class.
+On a poetic level, the idea of aural skills class is to be able to make one's ear better, and this is kind of rationale has existed in music circles for at least the past 150 years.
 
-* [@schumannMusikalischeHausUnd1967] - dumb schumann quote
-* 1934 quote about hear with eye, see with ear [@smith1934solfege]
-* McGaughy 1961 " qualified musicians must develop reading, singing, and [italics added]
-notational skills in order to achieve acuity of aural perception and to
-make effective use of that acuity" (p. i)."
+In his highly influenctial book _Aural Skills Acquisition: The Development of Listening, Reading, and Performing Skills in College-Level Musicians_, Gary @karpinskiAuralSkillsAcquisition2000 documents this deeply held belief in music pedagogy circles by listing poetic adages from romantic composer Robert Schumann in the mid 19th century through music educator Charles Elliott in the opening of his text, thus providing concrete examples of this belief that perfecting one's aural skills, or _ear_, more colloquially, is a highly sought after advanced skill. 
+After documenting many of of these, he asserts that the goal of improving one's ear is to escape from thinking about music to thinking in music.
 
-* CUDDY 1982 ITS JUST REALLY HARD TO TALK ABOUT 
+A lot of the reasons that I think we do this are introspective and anecdotal, but the thing is this is ubiquitous.
+There, as this literature review will show, is not a lot of great emperical evidence looking directly at melodic dictation, so then to claim that there are huge transfers to be gained from learning how to do it would be underwhelming.
+More recently people have noted that the rationale for why we teach this probably deserves more critique with researchers like Klonoski raising important questions like "What specific deficiency is revelaned with an incorrect reponse in melodic dictaiton settings?" [@klonoskiImprovingDictationAuralSkills2006] and even earlier researchers like Potter being baffled by the fact that many musicians do no actually keep up with their melodic dictation abilities after the classs ends POTTER QUOTE.
+Even a simple thought experiment using the old double dissicoation thign that htey love in neuroscience where you could imagine both situations where someone was probably a very good musician, but not that great at melodic dictation, or the converse where someone might be very good at melodic dictation, but is not that good of a musician (whatever that means) would indicate that there is probably not that strong of a casusal link between dictation abilities as measured by grades in an aural skills class and the infinite possiblities of musical activities that are even possible.  
 
-Examples about older people who have talked about it.
+This is a pretty grim introduction, but want to leave no dark elephant in the closet. 
+Rationale for learning to do this is often tacit and assumed and passed down over time, and despite the above is still good.
+All that said, there have been people who have tried to put the argument for melodic dictation into more concerete terms.
+In her textbook _Practical Ear Training_ Janet McLoud McGaughy notes that
 
-Despite the century old rhetoric on the importance of developing one's ear, exactly how an individual goes about improving one's _ear_, or even coming up with a concrete, operationalized definition of what one's _ear_ actually is has yet to be fully defined.
-A large part of this probably stems from the fact that many of the skills that are generally grouped under the curricular umbrella of aural skills are extremely complex cognitive processes that are hard to detail at their every step.
-These skills range from being able to identify basic features of the acoustical properties of music, to melodic dictation, polyphonic dictation, harmonic dication, error identification, hearing large scale form, sight singing, sight reading on an individual's primary instrument, as well as score reading, and any keyboard skills that aid in these tasks.
-While this assortment of abilities might seem like a aural potpourri, [@karpinskiAuralSkillsAcquisition2000] has taxonimized the aforementioned list into two larger categories of Listening Skills and Reading and Performing Skills.
-In his seminal text, he establishes multiple helpful that I will refer to throughout the course of this dissertation.
+> qualified musicians must develop reading, singing, and notational skills in order to achieve acuity of aural perception and to make effective use of that acuity" (p. i)."
 
+which makes the point that the development of ear training is about developing acuity in aural percepiton which then is then transfered over for other musical activity.
+
+UTAH MAN SAYS IT BEST WHEN HE SAYS 
+
+UTAH MAN QUOTE
 
 Stuff about the truly aural skills.
+
+At a deeper level, when we are teaching aural skills, we are teaching people to be better listeners and given all of the possible things that we can look at with aural skills, melodic dictaiton is great because there is a lot of great literature from the world of music perception, less to worry about than harmonic dictation, and is ubiquitous probably because NASM requires people to have to learn how to do this to get a music degree from an accredited music school.
+
+Karpinski devotes an entire chapter to melodic dictation in his book, note that it's a focal point, addressed in the majority of aural skills textbooks, and because of this it starts out with a really good jumping off point because he has done a lot of the preliminary work./
+
+OK GOOD NOW I HAVE AT LEAST RATIONALIZED WHY 
 
 In addition to his bifurcation of arual skills into Listening and Reading/Performing skills, Karpinski devotes an entire chapter to the study of melodic dictation, providing a verbal model for how he describes the component parts and process as a whole.
 
@@ -146,6 +156,7 @@ This is important because how we talk about and model things reflects or values 
 
 
 ```{r}
+message("Diagram")
 # library(DiagrammeR)
 # 
 # grViz("
@@ -248,8 +259,8 @@ Additinally it's worth noting initially that you can't directly apply these fram
 To make analogous task based on something like complex span tasks, would need to take certain set of notes and then always a finate setb be played back in arandom order (see chatper 3)
 
 So while for my purposes, I will refer to it as listed on page 1 of Cowan 2005:
-
-> [Working memory capacity] refers to the relativly small amount of information that one can hold in mind, attend to, or, technically speaking, maintain in a rapidly accesible state at one time. The term working is mean to indicate that meantal work requres use of such informaiton. (p.1])
+  
+  > [Working memory capacity] refers to the relativly small amount of information that one can hold in mind, attend to, or, technically speaking, maintain in a rapidly accesible state at one time. The term working is mean to indicate that meantal work requres use of such informaiton. (p.1])
 
 But in the literature below I comment on which definitional framework is used if relevant to the reporting of it all.
 
@@ -296,34 +307,37 @@ It almost seems redundant to review literature in support of music practice lead
 * Dictation has not been that well researched [@furbyEffectsPeerTutoring2016] 
 * people try lots of things, not much evidence for peer tutoring [@furbyEffectsPeerTutoring2016]
 * ISOLATION OF RHTYM AND MELODY
-  - Banton 1995
-  - Bland 1984
-  - Root 1931
-  - Wilson 1954
+- Banton 1995
+- Bland 1984
+- Root 1931
+- Wilson 1954
 * LISTENING BEFORE WRITING
-  - Banton 1995
+- Banton 1995
 * RECOGNIZING PATTERNS
-  - Banton 1995
-  - Bland 1984
-  - Root 1931
+- Banton 1995
+- Bland 1984
+- Root 1931
 * SINGING SILENTLY WHEN DICRTAING
-  - [@klonoskiImprovingDictationAuralSkills2006]
-  
+- [@klonoskiImprovingDictationAuralSkills2006]
+
 
 
 ### Sight Singing 
 
 * [@fournierCognitiveStrategiesSightsinging2017a]  - catalogugig different strategizes used in sight signings
-  - four main categories
-  - 14 subcategories
+- four main categories
+- 14 subcategories
 
 
 ### To Sort
 
 * Harrison 1994
 *  
-
+  
 ## Musical Factors
+
+
+## Structural 
 
 Clealrly strutures also will play a role in this. 
 
@@ -357,7 +371,7 @@ Clealrly strutures also will play a role in this.
 * SIZE OF INTERVALS [@ortmannTonalDeterminantsMelodic1933]
 * CONJUNCT VS DISJUNCT MVT ORTMAN 1933 PEMBROOK
 * length of the melody (Gephardt, 1978; Long, 1977;
-Pembrook, 1986), 
+                        Pembrook, 1986), 
 * number of presentations of the melody (Hofstetter, 1981; Pembrook, 1986),
 * context of the presentations (Schellenberg, 1985)
 * participants’ musical experience (Long, 1977; Oura & Hatano, 1988; Schellenberg, 1985; Taylor & Pembrook, 1983), 
@@ -370,7 +384,7 @@ Pembrook, 1986),
 * Gillespie 2001 - HOW DO PEOPLE SCORE MELODIES
 * Norris 2003 achievement and melodic dictation and sight singing CLEARLY A RELATIONSHIP
 * [@pembrookSendHelpAural1990] - 
-* [@paneyTeachingMelodicDictation2014] interviewed HS teachers on how they teach it for APi
+  * [@paneyTeachingMelodicDictation2014] interviewed HS teachers on how they teach it for APi
 
 * [@pembrookInterferenceTranscriptionProcess1986] - discussin here wher used tonality, melodic length, and motion, interesting also restricted melodies to ones you can sing. Found length, tonality and motion to be signficant at 13 3 1 variance. Though seems like with this there is a lot of chance for type I error and IS THERE EVEN ENOUGH INFO HERE IN THE PAPER TO RECREATE IT ALL. Also claims that people can hear about 10--16 notes, tho DJB would add this is obviously dependent on what i refer to as musical experimental factors and would not make sense to carry this logic forwad without more constraints. 
 
@@ -386,15 +400,150 @@ Additionally people need to keep up the skills they have, insert hilarious quote
 This of course does not nullify any findings on delibreate practice, but goes to show that the whole thing is kind of complicated. 
 
 
-### FANTASTIC papers and findings
+### Recent Computational Musicology Work papers and findings
+
+START HERE FOR WORD COUNT
+As noted above, in following studies XYZ, people have looked at musical features before me. 
+Since then there have been a lot futher strides in the world of computational musicology.
+SAY THAT IN CHAPTER 4 YOU ARE GOING TO be discussing history of computational musicology.
+
+
+#### Static Views of Computational Features/ FANTASTIC
+
+
+* Müllensiefen, Halpern & Wiggins (mullensiefen 2014)
+* Stewart, Müllensiefen & Cooper FIND THIS, related ACTUAL MBEA 
+* 
+
+* Sucessful at predicting court case decisions Müllensiefen & Pendzich, 2009 
+* (Kopiez & Müllensiefen, 2008) If Beatles songs of revolver can see what gets to the top 
+
+* M4S Corpus Müllensiefen, Wiggins & Lewis, 2008
+  - 14 K MIDI recordings
+  - 1950-2006
+  - Complete compositions
+  - Some performance timings
+  
+* Melodic Contour Müllensiefen, Bonometti, Stewart & Wiggins, 2009;
+* Melodic Contour Frieler, Müllensiefen & Riedemann, in press
+* Müllensiefen & Wiggins UNDER REVIEW COUNTOUR
+
+* PHRASE SEGMENTATION Pearce, Müllensiefen & Wiggins, 2008;
+
+* Harmonic Content Mauch, Müllensiefen, Dixon & Wiggins, 2008;
+* Harmonic Contetn Rhodes, Lewis & Müllensiefen, 2007
+* Melodic accent structure Pfleiderer & Müllensiefen, 2006;
+* Müllensiefen, Pfleiderer & Frieler, 2009 MELODIC ACCENT STUCTURE
+
+ENTER FANTASTIC
+
+FROM FANTSTIC
+
+Phrase summary features that summarise the content of a melodic phrase, conceptually similar to the features that Steinbeck (1982) proposed but incorporating as well recent knowledge and techniques on tonality induction and melodic contour.
+Repetition features that measure the repetitiveness of short melodic-rhythmic sequences or motives (called m-types) which are the building blocks of melodies. These features are mainly inspired by characteristic text constants from computational linguistics that describe the frequency distribution of words in written text (see Baayen, 2001).
+Features based on the frequencies and frequency densities of phrase summary features in a corpus of pop music. These features build on the assumption that the frequency with which melodic features appear in real music are very important for music cognition (Huron, 2006).
+Features that are based on the corpus-derived frequencies of m-types as building blocks of melodies. These features are motivated by the important role that word frequencies play in text information retrieval and text categorisation (Landau et al., 2007) and verbal memory (Tse and Altarriba, 2007).
+
+* open soure packge for computaitonal anlaysis
+* XX features
+* Comes from stats, music thoery, music cognition, computaitonal Linguatstic (GET THAT CITATION), MIR
+* Summary Features
+* M-type features
+* Context medoling via intergration of a orpus for 2nd order features
+
+OTHER PEOPLE WHO HAVE DONE THIS
+
+Folk music
+
+* Bartok 1936?
+* Bartok and Lord 1951
+* Lomax 1977
+* Steinbeck 1982
+* Jesser 1992
+* Sagrillo 1999
+
+* GET AND READ PAT SAVAGE ARTICLE
+
+Popular Music
+
+* Moor 2006
+* Kramarz 2006
+* Furnes 2006
+* Riedemann ????
+
+Computational Musicology
+
+* Eerola eta al 2007  and 2007
+* McCay 2005
+* Huron 2006
+* Frieler 2008
+* JAZZOMAT PROJECRT OUTPUT
+
+GOOGLE SCHOLAR FANTASTIC CITERS
+
+* ROLE OF FEATURE AND CONTEXT IN RECOGNITION OF NEW MELODIES MULLENSIEFN AND HALPERN 2014
+* EARWORMS FROM THREE ANGELS WILLIAMSON AND MULLSIEFN 2012
+* CORPUS ANALYS TOOLS FOR COMPUTATIONAL HOOK DISCOVERY VAN PALEN BURGOYNE BOUNTORDIS 2015
+* DISSECTIN AN EARWORM MELODIC FEATURES PREDICT IMI Jakubowski 2017
+
+* MODELING MELODIC DISCRIMINATION TASKS HAARPSION 2016
+* INTERRRATER AGREEMENT IN MEMORY FOR MELODY AS MESUARE OF SIMILARITY HERFF DEAN OLSEN 2017
+* MEMORY FOR MELODY INVEASTIAGTING HTE LINK BVETWEEN EPXERIENCE HERFF 2017
+* THE MUSOS TOOLKIT -- COMPUTER ASED OPEN SOURCE RAINSFORD PALER PAINE 2018!!!!!
+* Perception of Leitmotves in Richard Wagner's Dr Ring des -- BAKER 2017
+* Brown Collins Laney COMPUTAITONAL MODELS OF SYTLISTIC COMPARISON ???
+
+
+#### Dynamic 
+
+* PEARCE 2005 CITATION
+* THINGS FORM THAT 2012 REVIEW ARTICLE 
+* PAPERS HERE THAT SHOW HOW IDYOM IS A GOOD MODEL OF THIS 
+* SHANNON CITATION , MAYBE OLDER OTHER PAPERS TOO THAT TALK ABOUT SHANNON ENTOROPY
+
+## Experimental
+
+* Could also put things like timbre into here, also relevant to this
+
 
 ### Brief discussion on Individual and Envirnoment Interactions
 
+Thinking about how all of these parameters contributes makes sense to a certain degree
+Could imagene the extereme case of each of these either helping or hindering someone's ability to think.
+Additionally could be the point that things interact with each other.
+And on top of that we have the idea about levels of Explanation
+  - SEE THAT WITH WIGGINS
+  - SEE THAT WITH HOW COWAN 2005 ends his book 
 
-## Modeling and Polymorphism of Ability (End Chapter)
-### Draw from MMD ICMCP on problems with LV model 
-### Thought experiments on why musicianship is bad concept in general
+## Modeling and Polymorphism of Ability 
+
+Important here to note that unlike Harrison 1994, not really appropriate to conceptualize this as latenta bility.
+Very easy in statistical terms to talk about latent variables and be able to talk about lots of variance predictied.
+But problem with any sort of model like that or model of musical sophistcation is that it has same fate as g.
+
+QUOTES HERE FROM MS paper on latent variables 
+
+Musicianship as a concept of something ot measure when talking about this one little task with relative lack of concrete evidence for it's transfer, need to return back to a process model of melodic dictaiton.
+
 ### Polymophic, component process makes you think about things in models
+
+Going to say here that LVs are bad and that need to adopt a more polymorphic view of musicianship as advocated by
+
+* Levitin XXX
+* Peretz 2006
+
 ## Conclusions
+
+In this chapter I have first described what is melodic dictation, Karpinki's verbal model of it, noted what the things were that were missing from this model as a stepping off point, then went on to suggest a taxnomy of these based on what already has done. 
+Suggest that there are both individual as well as musical features that are at play here.
+Individual features can be either cognitive, sort of fixed, or environemental, having do with training.
+Musical features can be either structural, or experimental like how you play the melody.
+None of these are nessecariy hard and fast divisions, and certainly there are going to be some interactions between any and all of the levels.
+Clearly a very great question and given how much we look at it, want to know more about this complicated network of proccesses. 
+Given this laundry list of factors, now going to explore the individual parameters in Chapter 3, the musical chapters in 4 and 5, as well as how they would come together in chapter 6.
+Also will then go into more detail about many of the papers that I mentioned. 
+Really there should be a chapter 7 where after thinking about all of this I put together a computational model that succcedes at incorporating a polymorphic view of musical trianing by making a proces model inspired by Karpinki that is able to be both a research and pedagogical stepping off point for futre reserach on modeling melodic dictation.
+
+
 ### Clearly we have factors that are thought to contribute, need to investigate them in full with each chapter
 ### Not before first looking at why we are doing it in the first place (--transition to Chapter 2)
