--- a/document/01-theoretical-bkgrd-rationale.Rmd
+++ b/document/01-theoretical-bkgrd-rationale.Rmd
@@ -2,131 +2,91 @@
 
 ## What is melodic dictation? and Why?
 
-Melodic dictation is the process in which an individual is able to hear a melody, retain it in memory, and then use their knowledge of Western musical notation to recreate the mental image of the melody on paper in a limited time frame.
-For many, becoming profiecent at this task is at the core of developing one's aural skills.
-Presumably the reason that melodic dictation is so highly valued in music pedagogical circles is because that time spent learning to do this highly complex set of mental gymnastics results in increases in near transfer abilities^[since at no point after being in an Aural Skills setting would some one require one to write down a melody on paper within a limited time frame.] that are of great benefit to the student once they leave the classroom.
-Melodic dictation is only one of many skills that are taught and assesed in Schools of Music and this skill is normally taught in the context of an Aural Skills class.
-On a poetic level, the idea of aural skills class is to be able to make one's ear better, and this is kind of rationale has existed in music circles for at least the past 150 years.
+Melodic dictation is the process in which an individual hears a melody, retains it in memory, and then uses their knowledge of Western musical notation to recreate the mental image of it on paper in a limited time frame.
+For many, becoming profiecent at this task is at the core of developing one's aural skills [@karpinskiModelMusicPerception1990].
+For over a century, music pedagoges have highly valued melodic dictation^[In his highly influenctial book _Aural Skills Acquisition: The Development of Listening, Reading, and Performing Skills in College-Level Musicians_, Gary @karpinskiAuralSkillsAcquisition2000 documents this deeply held belief in music pedagogy circles by listing poetic adages from romantic composer Robert Schumann in the mid 19th century through music educator Charles Elliott in the opening of his book,  providing concrete examples of the belief that improving one's aural skills, or _ear_, is a highly sought after advanced skill. ] and most aural skills texts that have sections devoted to honing one's listening skills have material on melodic dictation [@karpinskiAuralSkillsAcquisition2000].
+Additionally, any school acredited by the North American Schools of Music requires learning this skill be part of any acredited curriula.
+Yet despite this tradition and ubiquity, the rationales as to _why_ it is important for students to learn this ability often comes from some sort of appeal to tradition or underwhelming anecdotal evidence that time spent learning to take melodic dictation results in increases in near transfer abilities after they have acquired a certain degree of profieency. 
+Rationales given for why students should learn melodic dictation has even been described by Gary Karpinski as being based on "compratively vauge aphorisms about mental relationships and intelligent listenings" [@karpinskiModelMusicPerception1990, p.192], with the argument for learning to take melodic dictation historically not being well supported with persuasive evidence. 
 
-In his highly influenctial book _Aural Skills Acquisition: The Development of Listening, Reading, and Performing Skills in College-Level Musicians_, Gary @karpinskiAuralSkillsAcquisition2000 documents this deeply held belief in music pedagogy circles by listing poetic adages from romantic composer Robert Schumann in the mid 19th century through music educator Charles Elliott in the opening of his text, thus providing concrete examples of this belief that perfecting one's aural skills, or _ear_, more colloquially, is a highly sought after advanced skill. 
-After documenting many of of these, he asserts that the goal of improving one's ear is to escape from thinking about music to thinking in music.
+Some researchers have even taken a more skeptical stance and have noted that the rationale for why we teach melodic dictation  deserves more critique.
+For example, Klonoski in writing about aural skills education aptly questions "What specific deficiency is revelaned with an incorrect reponse in melodic dictaiton settings?" [@klonoskiImprovingDictationAuralSkills2006].
+Earlier researchers like Potter, in their own publication, have noted that they have been baffled that many musicians do not actually keep up with their melodic dictation abilities after the classs ends [@potterIdentifyingSucessfulDictation1990], but presumably go on to have sucessful and fulfilling musical lives. 
+Additionally, suggesting that people who can hear music and then are unable to write it down, and thus are unable to think _in_ music, seems somewhat exclusionary to the vast amount of musical cultures out there that do not depend on any sort of written notation. 
 
-A lot of the reasons that I think we do this are introspective and anecdotal, but the thing is this is ubiquitous.
-There, as this literature review will show, is not a lot of great emperical evidence looking directly at melodic dictation, so then to claim that there are huge transfers to be gained from learning how to do it would be underwhelming.
-More recently people have noted that the rationale for why we teach this probably deserves more critique with researchers like Klonoski raising important questions like "What specific deficiency is revelaned with an incorrect reponse in melodic dictaiton settings?" [@klonoskiImprovingDictationAuralSkills2006] and even earlier researchers like Potter being baffled by the fact that many musicians do no actually keep up with their melodic dictation abilities after the classs ends POTTER QUOTE.
-Even a simple thought experiment using the old double dissicoation thign that htey love in neuroscience where you could imagine both situations where someone was probably a very good musician, but not that great at melodic dictation, or the converse where someone might be very good at melodic dictation, but is not that good of a musician (whatever that means) would indicate that there is probably not that strong of a casusal link between dictation abilities as measured by grades in an aural skills class and the infinite possiblities of musical activities that are even possible.  
-
-This is a pretty grim introduction, but want to leave no dark elephant in the closet. 
-Rationale for learning to do this is often tacit and assumed and passed down over time, and despite the above is still good.
-All that said, there have been people who have tried to put the argument for melodic dictation into more concerete terms.
-In her textbook _Practical Ear Training_ Janet McLoud McGaughy notes that
-
-> qualified musicians must develop reading, singing, and notational skills in order to achieve acuity of aural perception and to make effective use of that acuity" (p. i)."
-
-which makes the point that the development of ear training is about developing acuity in aural percepiton which then is then transfered over for other musical activity.
-
-UTAH MAN SAYS IT BEST WHEN HE SAYS 
-
-UTAH MAN QUOTE
-
-Stuff about the truly aural skills.
-
-At a deeper level, when we are teaching aural skills, we are teaching people to be better listeners and given all of the possible things that we can look at with aural skills, melodic dictaiton is great because there is a lot of great literature from the world of music perception, less to worry about than harmonic dictation, and is ubiquitous probably because NASM requires people to have to learn how to do this to get a music degree from an accredited music school.
-
-Karpinski devotes an entire chapter to melodic dictation in his book, note that it's a focal point, addressed in the majority of aural skills textbooks, and because of this it starts out with a really good jumping off point because he has done a lot of the preliminary work./
-
-OK GOOD NOW I HAVE AT LEAST RATIONALIZED WHY 
-
-In addition to his bifurcation of arual skills into Listening and Reading/Performing skills, Karpinski devotes an entire chapter to the study of melodic dictation, providing a verbal model for how he describes the component parts and process as a whole.
-
-### Describe process
-
-* Need to talk about chunking 
-
-Karpinski's chapter on Aural Skills culminates in a flowchart, Figure 3.1 in his textbook reporduced below, that schematizes how he believes the process to work. 
-
-Upon listenign to a melody,
-
-### Karpinski schematic of it (as verbal model, problems)
-
-Karpinski's schmatization of melodic dictation can generally be conceptualized as process that consists of the following four steps:
-
-* Hear
-* Remember
-* Understand
-* Notate
-
-For Karpinski, most of the cognitive action happens in the understand process, which is the only subprocess that he groups into two differnt sub-processes: one foo understanding the temporal aspects of music (e.g. pulse, meter, rhythmic proportions) and another for understand the pitch parameters (e.g. tonci, scale degree of starting pitch, scale degree of subsequnt pitches).
-The process is looped over with every hearing, and Karpinski suggests that the listener will use some sort of chunking of melodies in order to hear the melody and to then notate it. 
-
-#### Verbal model, has problems, OK for pedagogy
-
-As a verbal model, Karpinski's model of dictation makes sense and breaks down a very complicated cognitive process into discrete, sequential steps.
-This model, whether or not Karpinski intented it to be an actual cognitive model, I don't know, assumes serial processing of information and does not specify any of the actual parameters for each of the steps.
-This model serves as a great stepping off point for this dissertation, and its good for me that he didn't actually specificy any of the actual parameters, he just said certain things happen and gave an approximate order of the whole thing.
-He talks about a lot of the parameters leading up to it all,
-Even talks about things like representation and other paramters that are going to influence it all.
-Did not attempt to pin down any of the exact parameters of his model, but this is just me wanting to forshadown Chapter 6 where I take each of these issues and implement them in a computational model. 
-While covering many bases, one of the problems with using a verbal model as opposed to a computational one is that by not specificying exaclty what happens when and how everything is represented, the model can manifest itself in a multiude of different ways.
-
-Take for example the often cited model of working memory by Alan Baddely and Grahm Hitch which posits a modular view of workign memory capcacity [@baddeleyWorkingMemory1974].
-As discussed in CITE, although the model only has X amount of distinctive systems, the fact that they left it to be a verbal model of memory, and did not tack down exactly how each parameter functions, when built as computational model actually ends up yielding 156 different models. 
-While I will reseve discussing how many possible models might exists as derrived from the Karpinski for Chapter 6, it is suffice to say that clearly establishing the degree to which part of the model contributes in concrete way only helps with furthering the literature.
+Though despite this skepticism towards the topic, melodic dictation remains at the forefront of many aural skills classrooms.
+While the act of becoming better at this skill may or may not lead to large in increases in far transfer of ability, as a pedagogical tool, teaching students to take melodic dictation brings with it the concepts that are hoped to be instilled in music students long term.
+While not there has not been extensive research on melodic dictation research in the past few years, in fact [@paneyEffectDirectingAttention2016] notes that since 2000, only four studies were published that directly examined melodic dictation, this skill set sits on the border between literature on learning, melodic perception, memory, and music theory pedagogy and understanding and modeling exactly how it works remains as a untapped watershed of knowledge for the field of music theory, music education, and music perception and is deserving of much more attention. 
 
 
-#### Verbal model, no individual differnces tho literture to suggest
+### Describing Melodic Dictation 
 
-One thing that is lacking in the Karpinski model are any sort of individual differences.
-A wealth of literature from music perception and cognition suggests that musical training has effects on how people perform in musical tasks TRAIN OF CITATIONS HERE.
-Given the evidence that individual differences play a role here, there should be some sort of way of incorporating them into a model of melodic dictation. 
+Much of the foundational work on the topic of melodic dictation comes from the work of Gary Karpinski.
+Summerized most recently in his _Aural Skills Acquisition_ [@karpinskiAuralSkillsAcquisition2000], though first presented in an earlier article [@karpinskiModelMusicPerception1990], Karpinski proposes his own model of melodic dictation that provides a four step framework as how the process of melodic dictation works.^[In Karpinski 1990 he notes two other models of melodic dictation, one from Rogers where he says there are 2 processes, another from Thomas who says there are 15] 
 
-#### Computational model to be introduced
+His four steps include:
 
-From an empirical standpoint, both the task as well as the process of melodic dictation as depicted by Karpinksi resemble something that can be turned into an experiment, as well as a computational model. 
-This dissertation seeks to explore the degree to which methodologies from cognitive psychology and computational musicology are able to further this literature and take the next logical step in terms of understanding aural skills. 
+1. Hearing
+2. Short Term Melodic Memory
+3. Musical Understanding 
+4. Notation
 
+and occur as a looping, schematic process that is depicted in Figure 3.1 in his textbook, reproduced below and htroughout the chapter Karpinski discusses relevant factors at play at each stage.
+In the case of the table above, the process happens twice, presumably with a melody that can be extracted in two parts, which according to Karpinski and this prescribed formulas would consist of a melody from twelve to twent notes long for listenrs with few or no chunking abilities. 
+Reviewing the Karpinksi four step model will provide both a grounding in the current model that has been used in other litearture, and establish a groundwork from which to build. 
 
-* Need to talk about extractive listening in the melodic dictation process
-* Also need to talk about how if you look at melodic dictation as active process... helpfullllllll?
+The **hearing** stage involves the initial peceptions of the sound at a physical level of the tympanic membrane, as well as the listener's _attention_ to the incoming musical information.
+If the listener is not actively engaging in the task because of factors like "bordeom, lack of discipline, test anxiety, attention defict disorder, or any number of other causes" then any futher processes down the model will be determentially effected. 
+While Karpinski nots that these types of interference are normally "beyond the traditional juristiction of aural skills instruction", I will later argue that the concept of willfull attention when reconceptualized as working memory capacity, may actually play a large role in the melodic dictation process. 
 
+The **short-term melodic memory** Karpinski relies on empirical qualitative evidence from interview with students to show support for two separate memory encoding mechanisms, one for contour, and one for pitch.
+After citing literature supporting this claim (DOWLING 1978, DeWITT AND CROWDWER 1986, DOWLING 1994) regarding contour, as well as litertuare suggesting that in order to memorize chunks of melodic material, it helps to have been enculturated (DEUTSCH 1977,Oura and Hatano 1988, Handel 1989, Davies 1978, Dowling 1990) (a field of research that has been explored a lot since this was published PEARCE WORK), Karpinksi explains how ideas like extractive listening and chunking then take part in this process.
+Noting that there is probably some sort of capacity limit to music, citing Miller (1956) and corroborating musical evidence (Marple n.d)^[Should probalby do some foot note here saying this is wrong use of miller for reasons in Cowan 2005 and Miller is even on record as saying the magic number 7 was just used to thread his speech together...], Karpinski details the two stragegies from above to show how the dictation process is done.
+Karpinski's extractive listening refers to only selectively remembering parts of a melody.
+The chunking bit isa an idea that as musical understanding increases, so does musical memory.
+The idea is that if you can identify certain ideas that you hear in the incoming signal, you can more effectively undertand them. 
 
-Find Karpinksi 1990 on his model ......
+In order to further explain the idea of **musical understanding** Karpinski says its different ha musical memory. 
+Musical memory for Karpinski is ability to repeat what has been heard, and understanding is about comprehending things like the hierarchical metrical relationships between notes, rhythmic groupings and tonal functions.
+Within this whole idea is the thing of solimization for both rhythm and pitch (the takdimiti system KODALY) and relative pitch.
+Idea here is that hte two are then going to be linked to one another and as information comes in that can be musically understood, then it can then be moved from perception to notation more quickly.
 
-Given work from Karpinksi, we know that the following factors play a role in this extractive listening process 
+The **notation**, and final step of the dictation loop, require the knowledge of Western musical notation to be able to write down what is in one's musical short term memory and use their musical understanding to decode that mental representation into written notation. 
+This last step is ripe for errors as Karpinski notes has been foudn in other areas of research TAYLOR AND PEMBROOK 1983 and its noted that obviously it's very hard to write something down if you don't have the category for it. 
 
-* Hearing -- actual playing of melody
-* Short Term Melodic Memory 
-* Extractive Listening 
-* Chunking 
-* Meter and Rhythm
-* Rhythm Solimization and Understanding
-* Pitch -- representation and contour, solimization
-* Notation -- clealry need to know how it all works 
-* Tempo
-* Length and Number of Playing
-* Duration between Playing 
+The final parts of the chapter, Karpinski notes that other factors like **tempo**, the **length** and **number of playings**, and the **duration between playings** will also play a role in determining how an individual will perform on a melodic dictation.
+While this framework can help illuminate this cognitive process and help pedagogues understand how to best help their students, the model as it stands is not detialed enough for explanatory purposes and does not exhaust many factors that further research since its publicaiton have demonstrated as relevant making a model of melodic dictation.
+Again, though Karpinski did not intent to create an exhaustive model of the melodic dictaiton process, by only creating a verbal model, the model is unprepared to handle a few basic things which are just the next logical research step.
 
-* he puts forth chunking formula on page 99
+From this point on, need tone to suggest that what Karpinski did is good, but the next step is to get more formal with it and be able to start investigating factors that go into doing melodic dictation.
+Would be good to know how the process works and in order to do that need to look at it as it happens with experimental approaches, and additionally want to try to make a model of it to make sure we include everything.
 
-* is it OK to say that he leaves out difficulty of melody
-* is it OK to say that he leaves out individual differences
+Title of dissertatino is modeling melodic dictation, want to have model that describes it and its component parts, and want to have a model that describes the process. 
 
-* is rhthmic solimization just the same as LTM 
+have argument
 
-### Clearly this is psychological problem with different item level difficulty   
+HERE IS WHERE YOU TALK ABOUT WHY THERE IS A NEED FOR A COMPUTATIONAL MODEL AND EXPERIMENTAL MODEL
 
-When viewed from a pedagogical stand point, espcielaly given how litle time people have, it would basically be impossible to attend to each of these things in a gradient fashion in the standard 15 week semester that people have. 
-When people teach this, need to rely very much on intuition and basically adjust to the level of your class and syllabus and whatever on the fly in order to convey the most amount of musical materials possible. 
+Primarily, having a single model for melodic dictation assumes that all individuals are likely to engage in this sequential ordering of events.
+This could in fact be the case, but there is research ANDREW GOLDMAN AND STUFF that suggests that experts process and categorize musical information differently. 
+Additionally, different people will probably have different experiences dictating melodies based on their own past listening experience, a note that Karpinski makes earlier when THAT CITATION FROM UP ABOVE. 
+Not only will there be differences in ability, additionally people differ in their cognitive abilities.
+The model does not have any flexibility in terms of individual differences.
 
-Conversly, when viewed from an experimental standpoint, each of the above mentioned processes is bascially an experimental parameter waiting to be investigated.
-Additionally, the process that is put forth by KARPINSKI 1999 provides a stepping off point for positing some sort of comutational model.
-Going to add substatinally to it in that going to take into account both how difficulty the melodies are, something we  have intiutive understanding of, but could be operationalized, and also going to try to model individual differences based on factors that prior literature would suggest are different in individuals and should be considered in any sort of modeling going forward. 
-In addition to these above parameters discussed by Karpinski, now review other factors that could then contribute to this process.
+Secondly, the model also does not seem to treat melodies differently.
+For example, on page 103, Karpinski suggest that two passes should be adequate for a listern with few to no chunking skills to listen to be able to dictate a melody of twelve to twenty notes.
+This also would be an area of model improvement, as both the melodies listed below here are XX notes, within Karpinski's prescribed range, but intuition might suggest that the melodies are not equally difficult to dictate.
+The model is agnostic towards differences in melodies.
+
+In order to have a model that will eventually be able to incorporate everything involved in the melodic dictaiton process, and to be eventually implemented computationally, it is nesseacry to createa new taxonomy of factors that could contribute to modeling melodic dictation.
+In the 18 years since the publication of _Aural Skills Acquisition_, there has been a wealth of research that has been done on factors related to melodic dictation.
+I am convinced that the best way to taxonomize the multitude of factors contributing to this is to create a taxonomy where musical and individual factors are at the highest.
+
 
 #### Individual Factors to contribute 
 
 From an individual stand point, can bifurcate factors broadly into *cognitive factors*, or factors of people that are relatively consistent over people or basically like fixed effects things (use definiton of what is a fixed effect); and the other side of this would be things that would have to be delt with that change with training and exposure. 
-Going to refer to this second set of things as *Environmental* factors. 
+Going to refer to this second set of things as *environmental* factors. 
 Is there a better way to talk about this as nature vs nurture.
 Addiitonally need to then mention that there are of course epigenitic factors where both of these parameters might interact with one another. 
 For example, might then imagine that someone with higher cognitive abilitty, lots of training that was put forward by their parents, as well as tons of musical training, and personality traits that are more likely to learn more (daniels paper on that) might be different in terms of resutls than someone with lower cognitive abilities, no training, low SES, and a general inclination not to even take music lessons. 
@@ -153,6 +113,12 @@ Beginning with *cognitive factors* two levels, then go on to talk about *musical
 After discussing both and their two subcompoents as I have taxonimzed them, offer a brief discussion on how it's bad to think about these as just latent abilities.
 Instead talk about thinking about modeling melodic dictaiton, in terms of ACTUAL MODELING, as polymorphic conceptualization of aural skills. 
 This is important because how we talk about and model things reflects or values and often it will get in the way of stuff. 
+
+This is important because the end goal of this research is to be able to model this from an experimental and comptuational level. 
+
+From an empirical standpoint, both the task as well as the process of melodic dictation as depicted by Karpinksi resemble something that can be turned into an experiment, as well as a computational model. 
+It's basically an experiment where we have in person level predictors and melodies with different item level difficulty. 
+This dissertation seeks to explore the degree to which methodologies from cognitive psychology and computational musicology are able to further this literature and take the next logical step in terms of understanding aural skills.
 
 
 ```{r}
